requests and responses

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Index</h1>
     <a href="main.html">main</a><a href="regpage.html">regpage</a>
+    <button id="GETBUTTON">GET</button>
+    <button id="POSTBUTTON">POST</button>
+    <button id="PUTBUTTON">PUT</button>
+    <button id="DELETEBUTTON">DELETE</button>
 </body>
 </html>
