bg and sections

--- a/src/front/main.html
+++ b/src/front/main.html
@@ -7,7 +7,43 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Main</h1>
-    <a href="index.html">index</a><br><a href="regpage.html">regpage</a>
+    <div class="general">
+        <header id="header" class="header">
+            <div class="header__logo"></div>
+            <div class="header__navigation">
+                <label for="language">
+                    <select name="language" id="language" class="header__language">
+                        <option value="en">en</option>
+                        <option value="ua">ua</option>
+                    </select>
+                </label>
+                <label for="theme">
+                    <select name="theme" id="language" class="header__theme">
+                        <option value="light">light</option>
+                        <option value="dark">dark</option>
+                    </select>
+                </label>
+                <div class="header__user">USER</div>
+                <div class="header__menu">
+                    <div class="header__menu-settings">Settings</div>
+                    <div class="header__menu-logout">Log out</div>
+                </div>
+            </div>
+        </header>
+        <main id="main" class="main">
+            <div class="main__container">
+    
+            </div>
+        </main>
+        <footer id="footer" class="footer">
+            <div class="footer__copyrightSign">
+                <span>&#169;</span>
+                <span>2021</span>
+                <span>QWERTY</span>
+            </div>
+        </footer>        
+    </div>
+    <!-- <h1>Main</h1>
+    <a href="index.html">index</a><br><a href="regpage.html">regpage</a> -->
 </body>
 </html>
