main page dms and sort dropdown and settings popup

--- a/src/front/main.html
+++ b/src/front/main.html
@@ -146,5 +146,22 @@
             </div>
         </footer>        
     </div>
+    <div id="settingsPopup" class="settingsPopup hideSettingsPopup">
+        <div class="settingsPopup__container">
+            <div id="closePopUp" class="settingsPopup__button">
+                <button id="closePU" class="settingsPopup__button-close"></button>
+            </div>
+                <h1 class="settingsPopup__header">SETTINGS</h1>
+                <div class="settingsPopup__group">
+                    <input type="password" name="yourPassword" id="yourPassword" placeholder="Your password" class="settingsPopup__group-yourPassword settingsPopup__input">
+                    <input type="password" name="newPassword" id="newPassword" placeholder="New password" class="settingsPopup__group-newPassword settingsPopup__input">
+                    <input type="password" name="repeatPassword" id="repeatPassword" placeholder="Repeat password" class="settingsPopup__group-repeatPassword settingsPopup__input">
+                </div>
+                <div class="settingsPopup__buttons">
+                    <button id="settingsPopupConfirm" type="button" class="settingsPopup__buttons-confirm btn">CONFIRM</button>
+                    <button id="settingsPopupCancel" type="button" class="settingsPopup__buttons-cancel btn">CANCEL</button>
+                </div>
+        </div>
+    </div>
 </body>
 </html>
