logout button update

--- a/src/front/main.html
+++ b/src/front/main.html
@@ -29,7 +29,7 @@
                     </label>
                     <button id="settings" class="header__nav-settings nav-input-styles side-border">&#x2699;</button>
                     <a href="index.html">
-                        <button id="logout" class="header__nav-logout nav-input-styles">Logout</button>
+                        <button id="logout" class="header__nav-logout nav-input-styles">&#128682;</button>
                     </a>
                 </div>
             </div>
